Cập nhật cấu trúc thư mục và thêm file mới trên nhánh demo

--- a/CV_Student/gd_dk.html
+++ b/CV_Student/gd_dk.html
@@ -13,7 +13,7 @@
       }
 
       body {
-        background: url("images/gd_loai_ng.png") no-repeat center center/cover;
+        background: url("assets/images/img log/gd_loai_ng.png") no-repeat center center/cover;
         height: 100vh;
         display: flex;
         justify-content: center;
@@ -157,7 +157,7 @@
         <div class="header">
           <button class="close-btn" onclick="closeForm()">✖</button>
           <h2>Chào mừng bạn đến với FutureTrack</h2>
-          <img src="images/logo.png" alt="Logo" />
+          <img src="assets/images/img log/logo.png" alt="Logo" />
         </div>
         <div class="input-container">
           <label for="text">Tên</label>
@@ -186,9 +186,9 @@
           <button class="register-btn">Đăng Ký</button>
           <p style="text-align: center; margin: 10px 0">HOẶC</p>
           <div class="social-login">
-            <img src="images/logo_chrome.png" alt="Google" />
-            <img src="images/logo_facebook.png" alt="Facebook" />
-            <img src="images/logo_linkedin.jpg" alt="LinkedIn" />
+            <img src="assets/images/img log/logo_chrome.png" alt="Google" />
+            <img src="assets/images/img log/logo_facebook.png" alt="Facebook" />
+            <img src="assets/images/img log/logo_linkedin.jpg" alt="LinkedIn" />
           </div>
           <div class="login-link">
             Đã có tài khoản? <a href="gd_dn.html">Đăng nhập ngay</a>
