--- a/CV_Student/index.html
+++ b/CV_Student/index.html
@@ -26,7 +26,7 @@
                 <div class="dropdown">
                     <a class="text-gray-700 hover:text-blue-500" href="#">Profile & CV</a>
                     <div class="dropdown-content">
-                        <a href="templates/profile.html">Create CV</a>
+                        <a href="profile/profile.html">Create CV</a>
                         <a href="#">Upload CV</a>
                         <a href="#">Create Letter Cover</a>
                         <a href="#">CV Management</a>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <a class="text-gray-700 hover:text-blue-500" href="#">Career HandBook</a>
-                <a class="text-gray-700 hover:text-blue-500" href="#">Article</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Blog</a>
                 <a class="text-gray-700 hover:text-blue-500" href="#contact">Contact</a>
             </nav>
             <div class="flex items-center space-x-4">
@@ -53,7 +53,7 @@
                     <!-- Dropdown menu -->
                     <div id="user-menu" class="absolute right-0 mt-2 w-48 bg-white border rounded-lg shadow-lg hidden">
                         <p id="username" class="px-4 py-2">Hello, User</p>
-                        <a href="/profile" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Document
+                        <a href="profile/cv.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Document
                             Management</a>
                         <button id="logout-btn"
                             class="block w-full text-left px-4 py-2 text-red-600 hover:bg-gray-100">Log out</button>
@@ -148,14 +148,13 @@
             <div class="w-3/4 bg-white p-4 rounded-lg shadow">
                 <div class="relative">
                     <img alt="Advertisement banner" class="w-full rounded-lg" height="100"
-                        src="img/công-nghệ-thông-tin.png.jpeg" width="600" />
+                        src="assets/images/công-nghệ-thông-tin.png.jpeg" width="600" />
                 </div>
             </div>
         </div>
         <div class="mt-6 bg-white p-4 rounded-lg shadow">
             <div class="flex justify-between items-center">
                 <h2 class="text-lg font-bold text-blue-500">Best jobs</h2>
-                <span class="text-gray-500">Proposed by <span class="font-bold">TOPPYAI</span></span>
             </div>
             <div class="flex space-x-4 mt-4">
                 <select class="p-2 border rounded-lg">
@@ -457,11 +456,18 @@
                         </h3>
                     </div>
                     <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center">
-                        <img alt="Shinhan Bank Logo" class="mb-2" height="128"
-                            src="https://storage.googleapis.com/a1aa/image/Yf-H1mMDzK6W1gbY471na_GJeflmoU87WkKhMzQwm84.jpg"
+                        <div class="flex items-center mb-2">
+                            <i class="fas fa-heart text-green-600 mr-2">
+                            </i>
+                            <span class="text-green-600 font-semibold">
+                                TOP
+                            </span>
+                        </div>
+                        <img alt="Viettel Logo" class="mb-2" height="128"
+                            src="https://storage.googleapis.com/a1aa/image/7ab4HrpltXxKWsxmz0dCysv8aDOKZHp0FJpweZ2B3is.jpg"
                             width="128" />
                         <h3 class="text-lg font-semibold">
-                            Shinhan Bank
+                            Viettel
                         </h3>
                     </div>
                     <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center">
