--- a/CV_Student/profile/add_project.html
+++ b/CV_Student/profile/add_project.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Form</title>
-  <link rel="stylesheet" href="style_project.css">
+  <link rel="stylesheet" href="../css/style_project.css">
 </head>
 <body>
   <div class="container">
