--- a/CV_Student/gd_dn.html
+++ b/CV_Student/gd_dn.html
@@ -13,7 +13,7 @@
       }
 
       body {
-        background: url("images/gd_loai_ng.png") no-repeat center center/cover;
+        background: url("assets/images/img log/gd_loai_ng.png") no-repeat center center/cover;
         height: 100vh;
         display: flex;
         justify-content: center;
@@ -35,7 +35,7 @@
         display: flex;
         width: 800px;
         height: 450px;
-        background: url("images/gd_loai_ng.png");
+        background: url("assets/images/img log/gd_loai_ng.png");
         border-radius: 10px;
         overflow:hidden;
         box-shadow: 0px 0px 10px rgba(215, 207, 207, 0.2);
@@ -43,7 +43,7 @@
 
       .left {
         flex: 1;
-        background: url("img/ne.png") no-repeat center center/cover;
+        background: url("assets/images/img log/ne.png") no-repeat center center/cover;
       }
 
       .right {
@@ -158,7 +158,7 @@
       <div class="right">
         <button class = "close-btn" onclick="closeForm()">✖</button>
         <h2>Chào mừng bạn đã quay trở lại</h2>
-        <img src="images/logo.png" alt="Logo" />
+        <img src="assets/images/img log/logo.png" alt="Logo" />
         <div class="input-container">
           <label for="email">Email</label>
           <input type="email" class="input-box" placeholder="Nhập email của bạn" />
@@ -170,9 +170,9 @@
         </div>
         <p style="text-align: center; margin: 10px 0">OR</p>
         <div class="social-login">
-          <img src="images/logo_chrome.png" alt="Google" />
-          <img src="images/logo_facebook.png" alt="Facebook" />
-          <img src="images/logo_linkedin.jpg" alt="LinkedIn" />
+          <img src="assets/images/img log/logo_chrome.png" alt="Google" />
+          <img src="assets/images/img log/logo_facebook.png" alt="Facebook" />
+          <img src="assets/images/img log/logo_linkedin.jpg" alt="LinkedIn" />
         </div>
         <div class="register-link">
           Bạn chưa có tài khoản?
