--- a/CV_Student/profile/add_certificate.htm
+++ b/CV_Student/profile/add_certificate.htm
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Certificate Form</title>
-  <link rel="stylesheet" href="style_certificate.css">
+  <link rel="stylesheet" href="../css/style_certificate.css">
 </head>
 <body>
   <div class="form-container">
