--- a/CV_Student/profile/profile.html
+++ b/CV_Student/profile/profile.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Future Career Profile</title>
-    <link rel="stylesheet" href="style_profile.css">
+    <link rel="stylesheet" href="../css/style_profile.css">
 </head>
 
 <body>
     <!-- Video background -->
-<video autoplay muted loop id="background-video">
-    <source src="videos/4k Video - Technology Looped Background - No Copyright Loop Background Video.mp4" type="video/mp4">
-</video>
+    <video autoplay muted loop id="background-video">
+        <source src="assets/4k Video - Technology Looped Background - No Copyright Loop Background Video.mp4" type="video/mp4">
+    </video>    
 <!-- Thông báo Save thành công -->
 <div id="save-popup" class="save-popup">
     <p>Save Successful!</p>
@@ -37,7 +37,7 @@
             </div>
             <div class="avatar" id="avatar-container">
                 <input type="file" id="avatar-upload" accept="image/*" style="display: none;">
-                <img src="images/avatar-trang-4.jpg" alt="Avatar" id="avatar-img">
+                <img src="../assets/images/avatar-trang-4.jpg" alt="Avatar" id="avatar-img">
             </div>
             <div class="profile-info">
                 <h2>Your Name</h2>
@@ -61,7 +61,7 @@
         <div class="sections">
             <div class="section-box">
                 <div class="section">
-                    <h5>Education <img src="images/education.png" alt="Education Icon"></h5>
+                    <h5>Education <img src="../assets/images/education.png" alt="Education Icon"></h5>
                     <button onclick="showEducationForm()">Add Item</button>
                 </div>
                 <div id="education-list">
@@ -70,7 +70,7 @@
             </div>
             <div class="section-box">
                 <div class="section">
-                    <h5>Experience <img src="images/experiance.png  " alt="Experience Icon"></h5>
+                    <h5>Experience <img src="../assets/images/experiance.png  " alt="Experience Icon"></h5>
                     <button onclick="showExperienceForm()">Add Item</button>
                 </div>
                 <div id="experience-list">
@@ -79,7 +79,7 @@
             </div>
             <div class="section-box">
                 <div class="section">
-                    <h5>Skills <img src="images/skill.png" alt="Skills Icon"></h5>
+                    <h5>Skills <img src="../assets/images/skill.png" alt="Skills Icon"></h5>
                     <button onclick="showSkillForm()">Add Item</button>
                 </div>
                 <div class="skills">
@@ -92,7 +92,7 @@
             </div>
                 <div class="section-box">
                     <div class="section">
-                        <h5>Languages <img src="images/1246297.png" alt="Languages Icon"></h5>
+                        <h5>Languages <img src="../assets/images/1246297.png" alt="Languages Icon"></h5>
                         <button onclick="showLanguageForm()">Add Item</button>
                     </div>
                     <div class="languages">
@@ -105,7 +105,7 @@
             </div>
             <div class="section-box">
                 <div class="section">
-                    <h5>Certificate <img src="images/certificate.png" alt="Certificate Icon"></h5>
+                    <h5>Certificate <img src="../assets/images/certificate.png" alt="Certificate Icon"></h5>
                     <button onclick="showCertificateForm()">Add Item</button>
                 </div>
                 <div id="certificate-list">
@@ -114,7 +114,7 @@
             </div>
             <div class="section-box">
                 <div class="section">
-                    <h5>Prize <img src="images/prize.webp" alt="Prize Icon"></h5>
+                    <h5>Prize <img src="../assets/images/prize.webp" alt="Prize Icon"></h5>
                     <button onclick="showPrizeForm()">Add Item</button>
                 </div>
                 <div id="prize-list">
@@ -123,7 +123,7 @@
             </div>
             <div class="section-box">
                 <div class="section">
-                    <h5>Project <img src="images/project.png" alt="Project Icon"></h5>
+                    <h5>Project <img src="../assets/images/project.png" alt="Project Icon"></h5>
                     <button onclick="showProjectForm()">Add Item</button>
                 </div>
                 <div id="project-list">
